--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:e2e:ci": "start-server-and-test dev http://localhost:8000 cypress:run"
-
   },
   "dependencies": {
     "@babel/preset-typescript": "^7.23.3",
@@ -38,6 +37,7 @@
     "gatsby": "^5.13.2",
     "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
