--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gatsby": "^5.13.2",
     "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.13.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
