--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "gatsby": "^5.13.2",
     "gatsby-plugin-favicons": "^2.0.0",
+    "gatsby-plugin-html-attributes": "^1.0.5",
     "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.13.1",
     "identity-obj-proxy": "^3.0.0",
@@ -45,6 +47,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "start-server-and-test": "^2.0.3"
   },
   "devDependencies": {
