--- a/package.json
+++ b/package.json
@@ -29,18 +29,26 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
+    "babel-plugin-styled-components": "^2.1.4",
     "babel-preset-gatsby": "^3.13.1",
     "cypress": "^13.8.1",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-plugin-graphql": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "gatsby": "^5.13.2",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-favicons": "^2.0.0",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-html-attributes": "^1.0.5",
+    "gatsby-plugin-image": "^3.13.1",
     "gatsby-plugin-manifest": "^5.13.1",
     "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-styled-components": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-dom": "^4.0.0",
@@ -48,9 +56,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "^2.0.3",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
+    "styled-components": "^6.1.11",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
